--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -23,28 +23,95 @@
         android:layout_gravity="center"
         android:src="@drawable/ic_user_" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="Chào bạn, NGUYEN VAN NHAT"
+        android:textSize="20dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <!--        <ListView-->
+        <!--            android:id="@+id/lvthongtin"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="20dp" />-->
+        <TextView
+            android:id="@+id/profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/border_design"
+            android:drawableLeft="@drawable/ico_contract"
+            android:gravity="left|center"
+            android:text="Thông tin cá nhân"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/changepass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/border_design"
+            android:drawableLeft="@drawable/ico_pass"
+            android:gravity="left|center"
+            android:text="Đổi mật khẩu "
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/cartstatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/border_design"
+            android:drawableLeft="@drawable/ico_status"
+            android:gravity="left|center"
+            android:text="Lịch sử đơn hàng"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/version"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/border_design"
+            android:drawableLeft="@drawable/ico_version"
+            android:gravity="left|center"
+            android:text="Phiên bản 2022.03"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/border_design"
+            android:drawableLeft="@drawable/ico_logout"
+            android:gravity="left|center"
+            android:text="Đăng xuất"
+            android:textSize="20dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="Chào bạn, NGUYEN VAN NHAT"
-            android:textSize="20dp" />
-
-        <ListView
-            android:id="@+id/lvthongtin"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nguyễn Văn Nhất - 2022" />
+            android:text="MobileVN - 2022" />
     </LinearLayout>
 </LinearLayout>
